--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Blue Ocean Welcome to the Team! Project Milestones Agile Roles Readme.md template Readme.md template (est time: 4+ hours)",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode development -w",
+    "start": "nodemon server/index.js"
+
   },
   "repository": {
     "type": "git",
@@ -18,10 +21,12 @@
   },
   "homepage": "https://github.com/Nine-Coders/StudyIO#readme",
   "dependencies": {
+    "@babel/preset-react": "^7.16.0",
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.2.3",
     "axios": "^0.24.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
@@ -37,6 +42,7 @@
     "eslint": "^8.4.1",
     "eslint-plugin-react": "^7.27.1",
     "jest": "^27.4.3",
-    "webpack": "^5.65.0"
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1"
   }
 }
