--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode development -w",
     "start": "nodemon server/index.js"
-
   },
   "repository": {
     "type": "git",
@@ -28,10 +27,13 @@
     "axios": "^0.24.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "node-sass": "^7.0.0",
+    "nodemon": "^2.0.15",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.0.2"
+    "react-router-dom": "^6.0.2",
+    "sass-loader": "^12.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
@@ -39,9 +41,11 @@
     "@testing-library/react": "^12.1.2",
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
+    "css-loader": "^6.5.1",
     "eslint": "^8.4.1",
     "eslint-plugin-react": "^7.27.1",
     "jest": "^27.4.3",
+    "style-loader": "^3.3.1",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1"
   }
