--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode development -w",
     "start": "nodemon server/index.js"
-
   },
   "repository": {
     "type": "git",
@@ -24,6 +23,7 @@
     "@babel/preset-react": "^7.16.0",
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.2.1",
     "@mui/material": "^5.2.3",
     "axios": "^0.24.0",
     "cors": "^2.8.5",
