--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode development -w",
     "start": "nodemon server/index.js"
-
   },
   "repository": {
     "type": "git",
@@ -26,11 +25,13 @@
     "@emotion/styled": "^11.6.0",
     "@mui/material": "^5.2.3",
     "axios": "^0.24.0",
+    "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "nodemon": "^2.0.15",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2"
   },
