--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack --mode development -w",
     "start": "nodemon server/index.js"
-
   },
   "repository": {
     "type": "git",
@@ -31,7 +30,9 @@
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.0.2"
+    "react-router-dom": "^6.0.2",
+    "socket.io": "^4.4.0",
+    "socket.io-client": "^4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
