--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "morgan": "^1.10.0",
     "node-sass": "^7.0.0",
     "nodemon": "^2.0.15",
     "normalize.css": "^8.0.1",
