--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "firebase": "^9.6.1",
     "morgan": "^1.10.0",
     "node-sass": "^7.0.0",
     "nodemon": "^2.0.15",
@@ -37,9 +38,9 @@
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
+    "sass-loader": "^12.4.0",
     "socket.io": "^4.4.0",
-    "socket.io-client": "^4.4.0",
-    "sass-loader": "^12.4.0"
+    "socket.io-client": "^4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.0",
