--- a/package.json
+++ b/package.json
@@ -29,12 +29,16 @@
     "bootstrap": "^5.1.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "node-sass": "^7.0.0",
+    "express-session": "^1.17.2",
+    "node-sass": "^4.14.0",
     "nodemon": "^2.0.15",
     "normalize.css": "^8.0.1",
+    "passport": "^0.5.0",
+    "passport-google-oauth20": "^2.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.3",
     "react-dom": "^17.0.2",
+    "react-google-login": "^5.2.2",
     "react-router-dom": "^6.0.2",
     "sass-loader": "^12.4.0"
   },
