--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-google-login": "^5.2.2",
     "react-router-dom": "^6.0.2",
     "sass-loader": "^12.4.0",
+    "simple-peer": "^9.11.0",
     "socket.io": "^4.4.0",
     "socket.io-client": "^4.4.0"
   },
