--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "@mui/material": "^5.2.3",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-static-gzip": "^2.1.1",
     "firebase": "^9.6.1",
     "morgan": "^1.10.0",
     "node-sass": "^7.0.0",
@@ -50,6 +52,7 @@
     "@testing-library/react": "^12.1.2",
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
+    "compression-webpack-plugin": "^9.2.0",
     "css-loader": "^6.5.1",
     "eslint": "^8.4.1",
     "eslint-plugin-react": "^7.27.1",
